--- a/RegionCompetition.ui
+++ b/RegionCompetition.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>295</width>
-    <height>614</height>
+    <width>345</width>
+    <height>661</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -42,6 +42,9 @@
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <widget class="QRadioButton" name="radioStrikeLabelling">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ctrl+1&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
           <property name="text">
            <string>笔画</string>
           </property>
@@ -49,7 +52,7 @@
            <string>Ctrl+1</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup</string>
+           <string notr="true">buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -79,31 +82,49 @@
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QRadioButton" name="radioForeground">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ctrl+F&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
           <property name="text">
            <string>前景</string>
           </property>
+          <property name="shortcut">
+           <string>Ctrl+F</string>
+          </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_4</string>
+           <string notr="true">buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
         <item>
          <widget class="QRadioButton" name="radioBackground">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ctrl+B&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
           <property name="text">
            <string>背景</string>
           </property>
+          <property name="shortcut">
+           <string>Ctrl+B</string>
+          </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_4</string>
+           <string notr="true">buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
         <item>
          <widget class="QRadioButton" name="radioErazer">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ctrl+E&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
           <property name="text">
            <string>橡皮</string>
           </property>
+          <property name="shortcut">
+           <string>Ctrl+E</string>
+          </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_4</string>
+           <string notr="true">buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -140,7 +161,7 @@
            <bool>true</bool>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_3</string>
+           <string notr="true">buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -153,7 +174,7 @@
            <bool>false</bool>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_3</string>
+           <string notr="true">buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -163,7 +184,7 @@
            <string>粗</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_3</string>
+           <string notr="true">buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -195,6 +216,9 @@
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
          <widget class="QRadioButton" name="radioRectLabelling">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ctrl+2&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
           <property name="text">
            <string>矩形</string>
           </property>
@@ -202,12 +226,15 @@
            <string>Ctrl+2</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup</string>
+           <string notr="true">buttonGroup</string>
           </attribute>
          </widget>
         </item>
         <item>
          <widget class="QRadioButton" name="radioPolygonLabelling">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ctrl+3&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
           <property name="text">
            <string>多边形</string>
           </property>
@@ -215,12 +242,15 @@
            <string>Ctrl+3</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup</string>
+           <string notr="true">buttonGroup</string>
           </attribute>
          </widget>
         </item>
         <item>
          <widget class="QRadioButton" name="radioManualLabelling">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ctrl+4&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
           <property name="text">
            <string>手工</string>
           </property>
@@ -228,7 +258,7 @@
            <string>Ctrl+4</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup</string>
+           <string notr="true">buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -252,7 +282,7 @@
            <bool>true</bool>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_2</string>
+           <string notr="true">buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -262,7 +292,7 @@
            <string>中</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_2</string>
+           <string notr="true">buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -272,7 +302,7 @@
            <string>粗</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_2</string>
+           <string notr="true">buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -408,6 +438,9 @@
        <layout class="QHBoxLayout" name="horizontalLayout_10">
         <item>
          <widget class="QComboBox" name="_comboBoxLarger">
+          <property name="editable">
+           <bool>true</bool>
+          </property>
           <item>
            <property name="text">
             <string>100x</string>
