--- a/imageproperties.ui
+++ b/imageproperties.ui
@@ -26,7 +26,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>5</number>
+    <number>6</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -1379,7 +1379,7 @@
       <item row="4" column="0">
        <widget class="QLabel" name="label_122">
         <property name="text">
-         <string>原始图像</string>
+         <string/>
         </property>
        </widget>
       </item>
