--- a/RegionCompetition.ui
+++ b/RegionCompetition.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>345</width>
-    <height>661</height>
+    <height>618</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -52,7 +52,7 @@
            <string>Ctrl+1</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -92,7 +92,7 @@
            <string>Ctrl+F</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_4</string>
+           <string>buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -108,7 +108,7 @@
            <string>Ctrl+B</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_4</string>
+           <string>buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -124,7 +124,7 @@
            <string>Ctrl+E</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_4</string>
+           <string>buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -161,7 +161,7 @@
            <bool>true</bool>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_3</string>
+           <string>buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -174,7 +174,7 @@
            <bool>false</bool>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_3</string>
+           <string>buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -184,7 +184,7 @@
            <string>粗</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_3</string>
+           <string>buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -226,7 +226,7 @@
            <string>Ctrl+2</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -242,7 +242,7 @@
            <string>Ctrl+3</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -258,7 +258,7 @@
            <string>Ctrl+4</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -282,7 +282,7 @@
            <bool>true</bool>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_2</string>
+           <string>buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -292,7 +292,7 @@
            <string>中</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_2</string>
+           <string>buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -302,7 +302,7 @@
            <string>粗</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_2</string>
+           <string>buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
